# remmina-plugin-open

./: .travis.yml  CMakeLists.txt  README.md  index.html  params.json
remmina-plugin-open/: CMakeLists.txt
remmina-plugin-open/src/: plugin_config.h  remmina_plugin.c
